initial website upload

--- a/terry.html
+++ b/terry.html
@@ -14,7 +14,7 @@
   <header class="bg-green-700 text-white py-6 shadow-md">
     <div class="max-w-7xl mx-auto px-4 flex items-center justify-between">
       <div class="flex items-center space-x-3">
-        <img src="plants/logo.png" alt="TerryLittle Logo" class="h-12 w-12 rounded-full border-2 border-white">
+        <img src="logo.png" alt="TerryLittle Logo" class="h-12 w-12 rounded-full border-2 border-white">
         <h1 class="text-3xl font-bold tracking-wide">TerryLittle Plants</h1>
       </div>
       <span class="italic">Nature Delivered At Best</span>
@@ -31,63 +31,63 @@
     <!-- PRODUCT GRID -->
     <section class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="plants/plantain.jpeg" alt="Plantain" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="images/plantain.jpeg" alt="Plantain" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Plantain</h3>
         <p class="text-green-700">Nutritious and delicious — ideal for frying, baking, or boiling.</p>
         <p class="font-semibold mt-2">Price: $5.00 / bunch</p>
       </div>
 
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="plants/okra.jpeg" alt="Okra" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="https://via.placeholder.com/300x200?text=Okra" alt="Okra" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Okra</h3>
         <p class="text-green-700">Fresh green okra pods perfect for soups and stews.</p>
         <p class="font-semibold mt-2">Price: $3.00 / lb</p>
       </div>
 
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="plants/mango.jpeg" alt="Mango" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="https://via.placeholder.com/300x200?text=Mango" alt="Mango" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Mango</h3>
         <p class="text-green-700">Juicy, sweet tropical mangoes — a summertime favorite.</p>
         <p class="font-semibold mt-2">Price: $2.50 / each</p>
       </div>
 
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="plants/orange.jpeg" alt="Orange" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="https://via.placeholder.com/300x200?text=Orange" alt="Orange" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Orange</h3>
         <p class="text-green-700">Vitamin-rich oranges with bold citrus flavor.</p>
         <p class="font-semibold mt-2">Price: $4.00 / bag</p>
       </div>
 
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="plants/palmfruit.jpeg" alt="Palm Fruit" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="https://via.placeholder.com/300x200?text=Palm+Fruit" alt="Palm Fruit" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Palm Fruit</h3>
         <p class="text-green-700">Essential for making traditional palm oil and stews.</p>
         <p class="font-semibold mt-2">Price: $6.00 / pack</p>
       </div>
 
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="plants/mixedflowes.jpeg" alt="Flowers" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="https://via.placeholder.com/300x200?text=Flowers" alt="Flowers" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Mixed Flowers</h3>
         <p class="text-green-700">Colorful, fragrant blooms perfect for home or gifts.</p>
         <p class="font-semibold mt-2">Price: $10.00 / bouquet</p>
       </div>
 
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="plants/hibiscus.jpeg" alt="Hibiscus" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="https://via.placeholder.com/300x200?text=Hibiscus" alt="Hibiscus" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Hibiscus</h3>
         <p class="text-green-700">Bright red petals used for tea and ornamental purposes.</p>
         <p class="font-semibold mt-2">Price: $7.00 / pot</p>
       </div>
 
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="plants/rose.jpeg" alt="Rose" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="https://via.placeholder.com/300x200?text=Rose" alt="Rose" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Rose</h3>
         <p class="text-green-700">Classic red roses to express love and beauty.</p>
         <p class="font-semibold mt-2">Price: $8.00 / stem</p>
       </div>
 
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="plants/sunflower.jpeg" alt="Sunflower" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="https://via.placeholder.com/300x200?text=Sunflower" alt="Sunflower" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Sunflower</h3>
         <p class="text-green-700">Tall, golden-yellow flowers — a symbol of joy and sunlight.</p>
         <p class="font-semibold mt-2">Price: $6.00 / pot</p>
