--- a/terry.html
+++ b/terry.html
@@ -31,63 +31,63 @@
     <!-- PRODUCT GRID -->
     <section class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="images/plantain.jpeg" alt="Plantain" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="plantain.jpeg" alt="Plantain" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Plantain</h3>
         <p class="text-green-700">Nutritious and delicious — ideal for frying, baking, or boiling.</p>
         <p class="font-semibold mt-2">Price: $5.00 / bunch</p>
       </div>
 
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="https://via.placeholder.com/300x200?text=Okra" alt="Okra" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="okra.jpeg" alt="Okra" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Okra</h3>
         <p class="text-green-700">Fresh green okra pods perfect for soups and stews.</p>
         <p class="font-semibold mt-2">Price: $3.00 / lb</p>
       </div>
 
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="https://via.placeholder.com/300x200?text=Mango" alt="Mango" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="mango.jpeg" alt="Mango" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Mango</h3>
         <p class="text-green-700">Juicy, sweet tropical mangoes — a summertime favorite.</p>
         <p class="font-semibold mt-2">Price: $2.50 / each</p>
       </div>
 
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="https://via.placeholder.com/300x200?text=Orange" alt="Orange" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="orange.jpeg" alt="Orange" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Orange</h3>
         <p class="text-green-700">Vitamin-rich oranges with bold citrus flavor.</p>
         <p class="font-semibold mt-2">Price: $4.00 / bag</p>
       </div>
 
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="https://via.placeholder.com/300x200?text=Palm+Fruit" alt="Palm Fruit" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="palmfruit.jpeg" alt="Palm Fruit" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Palm Fruit</h3>
         <p class="text-green-700">Essential for making traditional palm oil and stews.</p>
         <p class="font-semibold mt-2">Price: $6.00 / pack</p>
       </div>
 
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="https://via.placeholder.com/300x200?text=Flowers" alt="Flowers" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="mixedflowes.jpeg" alt="Flowers" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Mixed Flowers</h3>
         <p class="text-green-700">Colorful, fragrant blooms perfect for home or gifts.</p>
         <p class="font-semibold mt-2">Price: $10.00 / bouquet</p>
       </div>
 
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="https://via.placeholder.com/300x200?text=Hibiscus" alt="Hibiscus" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="hibiscus.jpeg" alt="Hibiscus" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Hibiscus</h3>
         <p class="text-green-700">Bright red petals used for tea and ornamental purposes.</p>
         <p class="font-semibold mt-2">Price: $7.00 / pot</p>
       </div>
 
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="https://via.placeholder.com/300x200?text=Rose" alt="Rose" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="rose.jpeg" alt="Rose" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Rose</h3>
         <p class="text-green-700">Classic red roses to express love and beauty.</p>
         <p class="font-semibold mt-2">Price: $8.00 / stem</p>
       </div>
 
       <div class="bg-white rounded-xl shadow p-4">
-        <img src="https://via.placeholder.com/300x200?text=Sunflower" alt="Sunflower" class="w-full h-48 object-cover mb-4 rounded">
+        <img src="sunflower.jpeg" alt="Sunflower" class="w-full h-48 object-cover mb-4 rounded">
         <h3 class="text-xl font-bold mb-2">Sunflower</h3>
         <p class="text-green-700">Tall, golden-yellow flowers — a symbol of joy and sunlight.</p>
         <p class="font-semibold mt-2">Price: $6.00 / pot</p>
